DP-38400: Additional spacing fixes

--- a/docroot/themes/custom/mass_theme/overrides/css/key-message.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/key-message.css
@@ -72,9 +72,9 @@ div:not(.ma__microsite-key-message) .ma__key-message__content+.ma__key-message__
 
 /* --> Microsite specific */
 
-div.ma__microsite-key-message:has(.ma__key-message--image-overlay) {
+div.ma__microsite-key-message:has(.ma__key-message--image-overlay):not(:has(.ma__key-message__columns--two)) {
   @media (min-width: 911px) {
-    margin-block-end: 220px;
+    margin-block-end: 155px;
   }
 }
 
@@ -143,7 +143,11 @@ div.ma__microsite-key-message .ma__key-message.ma__key-message--image-overlay .m
 }
 
 div.ma__microsite-key-message .ma__key-message--image .ma__key-message__wrapper--overlay {
-  top: 72%;
+  top: 60%;
+}
+
+div.ma__microsite-key-message .ma__key-message--image.ma__key-message--half-image .ma__key-message__wrapper--overlay:not(:has(.ma__key-message__columns--two)) {
+  top: 40%;
 }
 
 div.ma__microsite-key-message .ma__key-message .ma__key-message__block:has(.ma__key-message__columns--two) {
